# hermes

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  __init__.py  after-install.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
adtention_hermes/: __init__.py  autoupdate.py  classifier.py  client.py  commands.py  gateway_patch.py  plugin.py  privacy.py  referral.py  renderer.py  state.py
scripts/: extract_changelog.py
tests/: conftest.py  test_autoupdate.py  test_classifier.py  test_client_privacy.py  test_commands.py  test_extract_changelog.py  test_gateway_patch.py  test_hermes_directory_loader.py  test_integration_fake_gateway.py  test_packaging.py  test_plugin_hooks.py  test_renderer.py  test_state.py
